# betabordle

./: .gitignore  CMakeLists.txt
Keybordle/: Keybordle.sln
Keybordle/Keybordle/: Keybordle.vcxproj  Keybordle.vcxproj.filters
Keybordle/Keybordle/Debug/: Keybordle.exe.recipe  Keybordle.ilk  vc142.idb
Keybordle/Keybordle/Debug/Keybordle.tlog/: CL.command.1.tlog  CL.write.1.tlog  Keybordle.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Keybordle/Keybordle/Release/: Keybordle.exe.recipe  Keybordle.iobj  Keybordle.ipdb
Keybordle/Keybordle/Release/Keybordle.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Keybordle.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
original/: CMakeLists.txt
remake/: CMakeLists.txt
remake/src/: input.c  input.h  keybordle.c  keybordle.h  main.c
src/: bordle.h  main.c  main.cpp  utils.c
